<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_normal"
        android:background="@drawable/bg_card">


        <ImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_normal"
            android:contentDescription="@string/this_is_card_image"
            android:src="@drawable/card_image" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/end_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/ahmed_hassan"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rounded"
                    android:fontFamily="@font/dm_sans"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@string/_3_hr"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    style="@style/style_text_dark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/engineer" />

                <TextView
                    style="@style/style_text_dark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/russian" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    style="@style/style_text_light"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="4dp"
                    android:text="@string/uk"
                    android:textSize="@dimen/text_medium"
                    app:drawableStartCompat="@drawable/icon" />

                <TextView
                    style="@style/style_text_light"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_5_days_ago"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    style="@style/style_text_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans"
                    android:text="@string/_150_reviews" />

                <TextView
                    style="@style/style_text_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:drawablePadding="4dp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/_4_5"
                    app:drawableEndCompat="@drawable/star" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
